fix bug in work wrapper overflow

--- a/src/input.css
+++ b/src/input.css
@@ -35,3 +35,13 @@ ul {
 .next-btn:hover img {
   opacity: 1;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.work-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.work-wrapper {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
